--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <div class="font-semibold">Independence Cup 2025</div>
           <div class="text-sm text-gray-200">Starts August 24</div>
         </div>
-        <a href="team_fixtures.html" class="ml-4 text-sm font-semibold underline decoration-2 underline-offset-4">View Results</a>
+        <a href="team_results.html" class="ml-4 text-sm font-semibold underline decoration-2 underline-offset-4">View Results</a>
       </div>
     </div>
   </section>
