--- a/gallery.html
+++ b/gallery.html
@@ -122,7 +122,7 @@
 
   <!-- Header injection -->
   <script type="module">
-    import { injectHeader } from "/assets/js/header.js";
+    import { injectHeader } from "./header.js";
     injectHeader("#site-header", { active: "photos" });
   </script>
 
