--- a/tournament_gallery.html
+++ b/tournament_gallery.html
@@ -113,6 +113,32 @@
         <!-- Add more items as needed -->
       </div>
     </section>
+
+    <!-- Video Section (added) -->
+    <section class="section-header rounded-2xl shadow-lg p-8">
+      <h2 class="text-2xl font-bold mb-4">Tournament Videos</h2>
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+        <!-- Video card -->
+        <div class="rounded-2xl overflow-hidden shadow-lg border border-slate-200 bg-white">
+          <div class="aspect-video">
+            <!-- Replace the src with your YouTube ID or self-hosted video embed -->
+            <iframe
+              class="w-full h-full"
+              src="https://www.youtube.com/embed/dQw4w9WgXcQ"
+              title="Tournament Highlights"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen></iframe>
+          </div>
+          <div class="p-4">
+            <h3 class="text-lg font-semibold">Tournament Highlights</h3>
+            <p class="text-sm text-gray-600">Big moments, top goals, and the best saves.</p>
+          </div>
+        </div>
+        <!-- Duplicate this block for more videos -->
+      </div>
+    </section>
+
   </main>
 
   <!-- Lightbox Modal -->
